fix scrollbar color

--- a/src/pages/startups/Startups.scss
+++ b/src/pages/startups/Startups.scss
@@ -343,14 +343,6 @@ $nav-top: 5px;
 	}
 }
 
-$radius-lang: 100px;
-$bg-color-lang: #a69d9d;
-$bg-active-lang: #4f406e;
-
-@mixin idea-lang__btn_hover {
-	background-color: rgba($bg-active-lang, 0.45);
-}
-
 .idea-lang {
 	width: max-content;
 	display: flex;
