--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -10,7 +10,7 @@
 	// /* For browsers that support `` properties */
 	@supports (-moz-appearance: none) {
 		scrollbar-width: thin;
-		scrollbar-color: $blue-main $darkest;
+		scrollbar-color: $bg-active-lang #000000;
 	}
 
 	&::-webkit-scrollbar {
@@ -24,13 +24,13 @@
 	}
 
 	&::-webkit-scrollbar-track {
-		background: $darkest;
-		border-radius: 10px;
+		background: #000000 !important;
+		border-radius: 50px;
 	}
 
 	&::-webkit-scrollbar-thumb {
-		background: $blue-main;
-		border-radius: 10px;
+		background: $bg-active-lang !important;
+		border-radius: 50px;
 	}
 }
 
