--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -27,6 +27,16 @@ $toc-title-color: #b991e3;
 
 $header-ltr-spc: 3px;
 
+// Lang bar
+$radius-lang: 100px;
+$bg-color-lang: #a69d9d;
+$bg-active-lang: #4f406e;
+
+@mixin idea-lang__btn_hover {
+	background-color: rgba($bg-active-lang, 0.45);
+}
+
+// nav burger icon
 @mixin burgerIcon($burger-width: 40px, $burger-height: 25px, $border-width: 3px) {
 	width: $burger-width;
 	height: $burger-height;
